=minor alignment fixes in form builder

--- a/jsapp/scss/components/_kobo.form-builder.scss
+++ b/jsapp/scss/components/_kobo.form-builder.scss
@@ -31,9 +31,9 @@
 }
 
 .formBuilder__contents {
-  height: calc(100% - 126px);
+  height: calc(100% - 125px);
   overflow: auto;
-  margin-top:15px;
+  margin-top:16px;
   margin-right: 0px;
   transition:margin 0.2s;
 }
